# cloud-networking-solutions

./: .gitignore  .pre-commit-config.yaml  README.md  renovate.json
demos/agent-gateway/: README.md  codelab.md
demos/agent-gateway/cloudrun/: corporate-email.yaml.tmpl  income-verification-api.yaml.tmpl  legacy-dms.yaml.tmpl
demos/agent-gateway/src/legacy-dms/: Dockerfile  (+3 more)
demos/agent-gateway/src/mortgage-agent/: deploy_agent.py  pyproject.toml
demos/agent-gateway/src/mortgage-agent/agent/: __init__.py  agent.py  otel_setup.py
demos/agent-gateway/src/mortgage-agent/tests/: test_agent.py  test_tools.py
demos/agent-gateway/terraform/: backend.conf  example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
demos/service-extensions-gke-gateway/: .gitignore  README.md  skaffold.yaml.tmpl
demos/service-extensions-gke-gateway/k8s/: generate.sh
demos/service-extensions-gke-gateway/terraform/: README.md  example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
reference-architectures/networking-for-ai-inference/: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  test_endpoints.sh
reference-architectures/networking-for-ai-inference/docs/: dns-setup.md  manual-deployment-gke-gateway.md  manual-deployment-self-managed-gateway.md  routing_examples.md
reference-architectures/networking-for-ai-inference/k8s/: kustomization-diy.yaml.tmpl  kustomization-gke.yaml.tmpl
reference-architectures/networking-for-ai-inference/terraform/: backend.tf  data.tf  diy-gateway.tfvars.tmpl  gke-gateway.tfvars.tmpl  main.tf  outputs.tf  variables.tf  versions.tf
(+246 files in other folders)
